# aliyun-openapi-cpp-sdk

./: .gitignore  CHANGELOG  README.md  README_zh.md
account/: CMakeLists.txt
account/include/alibabacloud/account/: AccountClient.h  AccountExport.h
account/include/alibabacloud/account/model/: CreateAliyunAccountForBidRequest.h  CreateAliyunAccountForBidResult.h  CreateAliyunAccountRequest.h  CreateAliyunAccountResult.h  CreateAppForBidRequest.h  CreateAppForBidResult.h  CreateAppRequest.h  CreateAppResult.h  DeleteAppForBidRequest.h  DeleteAppForBidResult.h  GetPubKeyRequest.h  GetPubKeyResult.h  ListAppkeyByOwnerAndBidRequest.h  ListAppkeyByOwnerAndBidResult.h
account/src/: AccountClient.cc
account/src/model/: CreateAliyunAccountForBidRequest.cc  CreateAliyunAccountForBidResult.cc  CreateAliyunAccountRequest.cc  CreateAliyunAccountResult.cc  CreateAppForBidRequest.cc  CreateAppForBidResult.cc  CreateAppRequest.cc  CreateAppResult.cc  DeleteAppForBidRequest.cc  DeleteAppForBidResult.cc  GetPubKeyRequest.cc  GetPubKeyResult.cc  ListAppkeyByOwnerAndBidRequest.cc  ListAppkeyByOwnerAndBidResult.cc
acs/: CMakeLists.txt
acs/include/alibabacloud/acs/: AcsClient.h  AcsExport.h
acs/include/alibabacloud/acs/model/: DeleteApiInDailyRequest.h  DeleteApiInDailyResult.h  DeleteApiOnlineRequest.h  DeleteApiOnlineResult.h  ModifyApiNameInDailyRequest.h  ModifyApiNameInDailyResult.h  ModifyApiNameRequest.h  ModifyApiNameResult.h  PurchaseApiRequest.h  PurchaseApiResult.h  PutFlowControlRequest.h  PutFlowControlResult.h  ResumePurchasedApiRequest.h  ResumePurchasedApiResult.h  StopPurchasedApiRequest.h  StopPurchasedApiResult.h
acs/src/: AcsClient.cc
acs/src/model/: DeleteApiInDailyRequest.cc  DeleteApiInDailyResult.cc  DeleteApiOnlineRequest.cc  DeleteApiOnlineResult.cc  ModifyApiNameInDailyRequest.cc  ModifyApiNameInDailyResult.cc  ModifyApiNameRequest.cc  ModifyApiNameResult.cc  PurchaseApiRequest.cc  PurchaseApiResult.cc  PutFlowControlRequest.cc  PutFlowControlResult.cc  ResumePurchasedApiRequest.cc  ResumePurchasedApiResult.cc  StopPurchasedApiRequest.cc  StopPurchasedApiResult.cc
cpp/output/7e757f1c-2a7f-41c4-bb05-eb0ec114ec50/sdk-test/: CMakeLists.txt
cpp/output/7e757f1c-2a7f-41c4-bb05-eb0ec114ec50/sdk-test/src/: Sdk-testClient.cc
ecsdemo/: CMakeLists.txt
ecsdemo/include/alibabacloud/ecsdemo/: EcsDemoClient.h  EcsDemoExport.h
ecsdemo/include/alibabacloud/ecsdemo/model/: CancelInstanceRequest.h  CancelInstanceResult.h
ecsdemo/src/: EcsDemoClient.cc
ecsdemo/src/model/: CancelInstanceRequest.cc  CancelInstanceResult.cc
ecsops/: CMakeLists.txt
ecsops/include/alibabacloud/ecsops/: EcsopsClient.h  EcsopsExport.h
ecsops/include/alibabacloud/ecsops/model/: OpsAllocateIpAddressRequest.h  OpsAllocateIpAddressResult.h  OpsAttachDiskRequest.h  OpsAttachDiskResult.h  OpsAttachSnapshotRequest.h  OpsAttachSnapshotResult.h  OpsAuthorizeSecurityGroupEgressRequest.h  OpsAuthorizeSecurityGroupEgressResult.h  OpsAuthorizeSecurityGroupRequest.h  OpsAuthorizeSecurityGroupResult.h  OpsCreateDiskRequest.h  OpsCreateDiskResult.h  OpsCreateImageRequest.h  OpsCreateImageResult.h  OpsCreateInstanceRequest.h  OpsCreateInstanceResult.h  OpsCreateSecurityGroupRequest.h  OpsCreateSecurityGroupResult.h  OpsCreateSnapshotRequest.h  OpsCreateSnapshotResult.h  OpsDeleteImageRequest.h  OpsDeleteImageResult.h  OpsDeleteSecurityGroupRequest.h  (+77 more)
ecsops/src/: EcsopsClient.cc
ecsops/src/model/: OpsAllocateIpAddressRequest.cc  OpsAllocateIpAddressResult.cc  OpsAttachDiskRequest.cc  OpsAttachDiskResult.cc  OpsAttachSnapshotRequest.cc  OpsAttachSnapshotResult.cc  OpsAuthorizeSecurityGroupEgressRequest.cc  OpsAuthorizeSecurityGroupEgressResult.cc  OpsAuthorizeSecurityGroupRequest.cc  OpsAuthorizeSecurityGroupResult.cc  OpsCreateDiskRequest.cc  OpsCreateDiskResult.cc  OpsCreateImageRequest.cc  OpsCreateImageResult.cc  OpsCreateInstanceRequest.cc  OpsCreateInstanceResult.cc  OpsCreateSecurityGroupRequest.cc  OpsCreateSecurityGroupResult.cc  OpsCreateSnapshotRequest.cc  OpsCreateSnapshotResult.cc  OpsDeleteImageRequest.cc  OpsDeleteImageResult.cc  OpsDeleteSecurityGroupRequest.cc  OpsDeleteSecurityGroupResult.cc  OpsDeleteSnapshotRequest.cc  OpsDeleteSnapshotResult.cc  OpsDescribeDisksRequest.cc  OpsDescribeDisksResult.cc  OpsDescribeGroupAttributeRequest.cc  OpsDescribeGroupAttributeResult.cc  OpsDescribeGroupsRequest.cc  OpsDescribeGroupsResult.cc  OpsDescribeImagesRequest.cc  OpsDescribeImagesResult.cc  OpsDescribeInstancesRequest.cc  OpsDescribeInstancesResult.cc  OpsDescribeMountedSnapshotsRequest.cc  OpsDescribeMountedSnapshotsResult.cc  OpsDescribeRegionsRequest.cc  OpsDescribeRegionsResult.cc  (+60 more)
ft/: CMakeLists.txt
ft/include/alibabacloud/ft/: FtClient.h
ft/src/: FtClient.cc
ft/src/model/: Add23Request.cc  Add23Result.cc  AddApiRequest.cc  AddApiResult.cc  AddTestRequest.cc  AddTestResult.cc  BatchAuditTest02Request.cc  BatchAuditTest02Result.cc  CountCloudProductCallTimesRequest.cc  CountCloudProductCallTimesResult.cc  CreateInstanceRequest.cc  CreateInstanceResult.cc  DeleteAllStrategyRequest.cc  DeleteAllStrategyResult.cc  DescribeOssSpecRequest.cc  DescribeOssSpecResult.cc  DescribeResourceTypeRequest.cc  DescribeResourceTypeResult.cc  FtDynamicAddressHttpVpcRequest.cc  FtFlowSpecial1586868138332Request.cc  FtFlowSpecial1586868138332Result.cc  FtGatedLaunchPolicy3ApiRequest.cc  FtGatedLaunchPolicy3ApiResult.cc  FtGatedLaunchPolicyApiRequest.cc  FtGatedLaunchPolicyApiResult.cc  FtIpFlowControlRequest.cc  FtIpFlowControlResult.cc  GetMigrateStrategyResultRequest.cc  GetMigrateStrategyResultResult.cc  GetTairDataRequest.cc  GetTairDataResult.cc  MigrateStrategyRequest.cc  MigrateStrategyResult.cc  QueryDomainChangeRecordsRequest.cc  QueryDomainChangeRecordsResult.cc  QueryErrorApisRequest.cc  QueryErrorApisResult.cc  RoaHttpStringResponseTestRequest.cc  RoaHttpStringResponseTestResult.cc  RpcDubboServiceRouteApiRequest.cc  (+18 more)
sdk/: CMakeLists.txt
sdk/include/alibabacloud/sdk/: SDKClient.h  SDKExport.h
sdk/src/: SDKClient.cc
sdk/src/model/: DemoRequest.cc  DemoResult.cc
(+651 files in other folders)
